[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
brownstone = "3.0.0"
clap = { version = "4.0.29", features = ["derive", "unicode"] }
enum-map = "2.4.1"
gridly = "0.9.0"
gridly_grids = "0.5.0"
itertools = "0.10.5"
joinery = "3.1.0"
lazy_format = "2.0.0"
nom = "7.1.1"
nom-supreme = "0.8.0"
rayon = "1.6.1"
thiserror = "1.0.37"

[build-dependencies]
joinery = "3.1.0"
lazy_format = "2.0.0"
nom = "7.1.1"
nom-supreme = "0.8.0"
